--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,14 @@
         <!-- заголовок спрячется, но добавить aria label -->
         <h1 class="portfolio-title">Наши работы</h1>
         <ul class="portfolio-projects-list list">
-          <li class="portfolio-projects-list-item"><a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+
+                  <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Технокряк</h2>
                 <p class="project-description">Веб-сайт</p>
