added backdrop, modal & transitions

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <li class="contacts-nav-item" lang="en"><a class="contacts-nav-link link"
             href="mailto:info@devstudio.com">info@devstudio.com
             <svg class="icon-envelope">
-              <use href="../img/icons.svg#envelope"></use>
+              <use href="./img/icons.svg#envelope"></use>
             </svg>
           </a></li>
         <li class="contacts-nav-item"><a class="contacts-nav-link link" href="tel:+380961111111">+38 096 111
             11 11
             <svg class="icon-smartphone">
-              <use href="../img/icons.svg#smartphone"></use>
+              <use href="./img/icons.svg#smartphone"></use>
             </svg>
           </a></li>
       </ul>
@@ -49,7 +49,7 @@
   <main>
 
     <!--=============HERO==============-->
-    <section class="hero section">
+    <section class="hero">
       <div class="container">
         <h1 class="hero-title">эффективные решения <br> для вашего бизнеса</h1>
         <button data-modal-open class="order-button button" type="button">Заказать услугу</button>
@@ -58,7 +58,7 @@
             <p>текст модального окна</p>
             <button class="close-button" data-modal-close aria-label="закрыть">
               <svg class="close-button-icon">
-                <use href="../img/close-back.svg" width="11px" height="11px"></use>
+                <use href="./img/icons.svg#close" width="11px" height="11px"></use>
               </svg>
             </button>
           </div>
@@ -166,24 +166,28 @@
               <p class="team-role">Product Designer</p>
               <ul class="social-links-list list">
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="../img/icons.svg#instagram"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#instagram"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="../img/icons.svg#twitter"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#twitter"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="../img/icons.svg#facebook"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#facebook"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="../img/icons.svg#linkedin"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -194,24 +198,28 @@
               <p class="team-role">Frontend Developer</p>
               <ul class="social-links-list list">
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#instagram"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#instagram"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#twitter"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#twitter"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#facebook"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#facebook"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#linkedin"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -223,24 +231,28 @@
               <p class="team-role">Marketing</p>
               <ul class="social-links-list list">
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#instagram"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#instagram"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#twitter"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#twitter"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#facebook"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#facebook"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#linkedin"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -252,24 +264,28 @@
               <p class="team-role">Designer</p>
               <ul class="social-links-list list">
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#instagram"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#instagram"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#twitter"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#twitter"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#facebook"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#facebook"></use>
+                    </svg></a>
                 </li>
                 <li class="social-links-list-item">
-                  <svg class="social-links-icon">
-                    <use href="./img/icons.svg#linkedin"></use>
-                  </svg>
+                  <a href="" class="social-links-list">
+                    <svg class="social-links-icon">
+                      <use href="./img/icons.svg#linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -283,24 +299,24 @@
       <div class="container">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="our-clients-list list">
-          <li class="our-clients-list-item icon-logo"> <svg class="icon-logo-1">
-              <use href="../img/icons.svg#logo1"></use>
-            </svg> </li>
-          <li class="our-clients-list-item icon-logo"> <svg class="icon-logo-2">
-              <use href="../img/icons.svg#logo2"></use>
-            </svg></li>
-          <li class="our-clients-list-item icon-logo"> <svg class="icon-logo-3">
-              <use href="../img/icons.svg#logo3"></use>
-            </svg></li>
-          <li class="our-clients-list-item icon-logo"> <svg class="icon-logo-4">
-              <use href="../img/icons.svg#logo4"></use>
-            </svg></li>
-          <li class="our-clients-list-item icon-logo"> <svg class="icon-logo-5">
-              <use href="../img/icons.svg#logo5"></use>
-            </svg></li>
-          <li class="our-clients-list-item icon-logo"> <svg class="icon-logo-6">
-              <use href="../img/icons.svg#logo6"></use>
-            </svg></li>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
+                <use href="./img/icons.svg#logo1" width="45px" height="50px"></use>
+              </svg></a> </li>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
+                <use href="./img/icons.svg#logo2" width="40px" height="52px"></use>
+              </svg></a></li>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
+                <use href="./img/icons.svg#logo3" width="42px" height="43px"></use>
+              </svg></a></li>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
+                <use href="./img/icons.svg#logo4" width="170px" height="90px"></use>
+              </svg></a></li>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
+                <use href="./img/icons.svg#logo5" width="59px" height="47px"></use>
+              </svg></a></li>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
+                <use href="./img/icons.svg#logo6" width="170px" height="90px"></use>
+              </svg></a></li>
         </ul>
       </div>
     </section>
@@ -333,22 +349,22 @@
             <ul class="social-links-list list">
               <li class="social-links-list-item">
                 <svg class="social-links-icon">
-                  <use href="../img/icons.svg#instagram"></use>
+                  <use href="./img/icons.svg#instagram"></use>
                 </svg>
               </li>
               <li class="social-links-list-item">
                 <svg class="social-links-icon">
-                  <use href="../img/icons.svg#twitter"></use>
+                  <use href="./img/icons.svg#twitter"></use>
                 </svg>
               </li>
               <li class="social-links-list-item">
                 <svg class="social-links-icon">
-                  <use href="../img/icons.svg#facebook"></use>
+                  <use href="./img/icons.svg#facebook"></use>
                 </svg>
               </li>
               <li class="social-links-list-item">
                 <svg class="social-links-icon">
-                  <use href="../img/icons.svg#linkedin"></use>
+                  <use href="./img/icons.svg#linkedin"></use>
                 </svg>
               </li>
             </ul>
