--- a/portfolio.html
+++ b/portfolio.html
@@ -32,20 +32,20 @@
       </nav>
       <!--=============HEADER-CONTACTS-NAV=================-->
       <div>
-      <ul class="contacts-nav list">
-        <li class="contacts-nav-item" lang="en"><a class="contacts-nav-link link"
-            href="mailto:info@devstudio.com">info@devstudio.com
-            <svg class="icon-envelope">
-              <use href="../img/icons.svg#envelope"></use>
-            </svg>
-          </a></li>
-        <li class="contacts-nav-item"><a class="contacts-nav-link link" href="tel:+380961111111">+38 096 111
-            11 11
-            <svg class="icon-smartphone">
-              <use href="../img/icons.svg#smartphone"></use>
-            </svg>
-          </a></li>
-      </ul>
+        <ul class="contacts-nav list">
+          <li class="contacts-nav-item" lang="en"><a class="contacts-nav-link link"
+              href="mailto:info@devstudio.com">info@devstudio.com
+              <svg class="icon-envelope">
+                <use href="./img/icons.svg#envelope"></use>
+              </svg>
+            </a></li>
+          <li class="contacts-nav-item"><a class="contacts-nav-link link" href="tel:+380961111111">+38 096 111
+              11 11
+              <svg class="icon-smartphone">
+                <use href="./img/icons.svg#smartphone"></use>
+              </svg>
+            </a></li>
+        </ul>
       </div>
     </div>
   </header>
@@ -68,81 +68,128 @@
 
         <!-- ==============PORTFOLIO-PROJECTS=============== -->
         <!-- заголовок спрячется, но добавить aria label -->
-        <h1 class="portfolio-title">Наши работы</h1>
+        <h1 class="portfolio-title is-hidden">Наши работы</h1>
         <ul class="portfolio-projects-list list">
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-
-                  <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
-                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                    платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.</p>
-
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Технокряк</h2>
                 <p class="project-description">Веб-сайт</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"><a class="portfolio-project-card-link link" href="">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
               <img class="portfolio-project-photo" src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean"
                 width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                 <p class="project-description">Дизайн</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Ресторан Seafood</h2>
                 <p class="project-description">Приложение</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект Prime</h2>
                 <p class="project-description">Маркетинг</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img05.jpg" alt="приложение Boxes" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img05.jpg" alt="приложение Boxes"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект Boxes</h2>
                 <p class="project-description">Приложение</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Inspiration has no Borders</h2>
                 <p class="project-description">Веб-сайт</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img07.jpg" alt="дизайн издания Limited Edition" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img07.jpg"
+                alt="дизайн издания Limited Edition" width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Издание Limited Edition</h2>
                 <p class="project-description">Дизайн</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект LAB</h2>
                 <p class="project-description">Маркетинг</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
-                src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business" width="370">
+          <li class="portfolio-projects-list-item">
+            <a class="portfolio-project-card-link link" href="">
+              <img class="portfolio-project-photo" src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business"
+                width="370">
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Growing Business</h2>
                 <p class="project-description">Приложение</p>
@@ -156,54 +203,54 @@
 
   <!-- ==========FOOTER============== -->
 
-<footer class="footer">
-  <div class="container">
-    <div class="footer-wrapper">
-      <div class="left-side">
-        <a class="footer-logo link" href="./index.html"><span class="accent-logo">Web</span>Studio</a>
-        <address lang="ru">
-          <ul class="footer-links list">
-            <li class="footer-links-item"><a class="footer-address link"
-                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
-                target="_blank">г.Киев
-                пр-т Леси Украинки, 26</a></li>
-            <li class="footer-links-item"><a class="footer-links-link link"
-                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-links-item"><a class="footer-links-link link" href="tel:+380961111111">+38 096 111 11
-                11</a></li>
-          </ul>
-        </address>
-      </div>
-      <div class="right-side">
-        <div class="join-us">
-          <p class="join-us-slogan">присоединяйтесь</p>
-          <ul class="social-links-list list">
-            <li class="social-links-list-item">
-              <svg class="social-links-icon">
-                <use href="./img/icons.svg#instagram"></use>
-              </svg>
-            </li>
-            <li class="social-links-list-item">
-              <svg class="social-links-icon">
-                <use href="./img/icons.svg#twitter"></use>
-              </svg>
-            </li>
-            <li class="social-links-list-item">
-              <svg class="social-links-icon">
-                <use href="./img/icons.svg#facebook"></use>
-              </svg>
-            </li>
-            <li class="social-links-list-item">
-              <svg class="social-links-icon">
-                <use href="./img/icons.svg#linkedin"></use>
-              </svg>
-            </li>
-          </ul>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-wrapper">
+        <div class="left-side">
+          <a class="footer-logo link" href="./index.html"><span class="accent-logo">Web</span>Studio</a>
+          <address lang="ru">
+            <ul class="footer-links list">
+              <li class="footer-links-item"><a class="footer-address link"
+                  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
+                  target="_blank">г.Киев
+                  пр-т Леси Украинки, 26</a></li>
+              <li class="footer-links-item"><a class="footer-links-link link"
+                  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li class="footer-links-item"><a class="footer-links-link link" href="tel:+380961111111">+38 096 111 11
+                  11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="right-side">
+          <div class="join-us">
+            <p class="join-us-slogan">присоединяйтесь</p>
+            <ul class="social-links-list list">
+              <li class="social-links-list-item">
+                <svg class="social-links-icon">
+                  <use href="./img/icons.svg#instagram"></use>
+                </svg>
+              </li>
+              <li class="social-links-list-item">
+                <svg class="social-links-icon">
+                  <use href="./img/icons.svg#twitter"></use>
+                </svg>
+              </li>
+              <li class="social-links-list-item">
+                <svg class="social-links-icon">
+                  <use href="./img/icons.svg#facebook"></use>
+                </svg>
+              </li>
+              <li class="social-links-list-item">
+                <svg class="social-links-icon">
+                  <use href="./img/icons.svg#linkedin"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </body>
 
 </html>
