--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
         <div data-modal class="backdrop is-hidden">
           <div class="modal">
             <p>текст модального окна</p>
+            
             <button class="close-button" data-modal-close aria-label="закрыть">
-              <svg class="close-button-icon">
-                <use href="./img/icons.svg#close" width="11px" height="11px"></use>
+              <svg class="close-button-icon" width="11px" height="11px">
+                <use href="./img/icons.svg#close"></use>
               </svg>
             </button>
           </div>
@@ -128,29 +129,23 @@
       <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="about-list list">
-          <li class="about-list-item">
-            <a class="about-list-link link" href="">
+          <li class="about-list-item">            
               <img src="./img/box1.jpg" alt="computer" width="370">
               <div class="card-text-box">
                 <p class="card-text">десктопные приложения</p>
-              </div>
-            </a>
+              </div>          
           </li>
-          <li class="about-list-item">
-            <a class="about-list-link link" href="">
+          <li class="about-list-item">            
               <img src="./img/box2.jpg" alt="smartphone" width="370">
               <div class="card-text-box">
                 <p class="card-text">мобильные приложения</p>
-              </div>
-            </a>
+              </div>           
           </li>
-          <li class="about-list-item">
-            <a class="about-list-link link" href="">
+          <li class="about-list-item">            
               <img src="./img/box3.jpg" alt="tablet" width="370">
               <div class="card-text-box">
                 <p class="card-text">дизайнерские решения</p>
-              </div>
-            </a>
+              </div>           
           </li>
         </ul>
       </div>
@@ -300,23 +295,23 @@
       <div class="container">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="our-clients-list list">
-          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
-                <use href="./img/icons.svg#logo1" width="45px" height="50px"></use>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo" width="45px" height="50px">
+                <use href="./img/icons.svg#logo1"></use>
               </svg></a> </li>
-          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
-                <use href="./img/icons.svg#logo2" width="40px" height="52px"></use>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo" width="40px" height="52px">
+                <use href="./img/icons.svg#logo2"></use>
               </svg></a></li>
-          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
-                <use href="./img/icons.svg#logo3" width="42px" height="43px"></use>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo" width="42px" height="43px">
+                <use href="./img/icons.svg#logo3"></use>
               </svg></a></li>
-          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
-                <use href="./img/icons.svg#logo4" width="170px" height="90px"></use>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo" width="170px" height="90px">
+                <use href="./img/icons.svg#logo4"></use>
               </svg></a></li>
-          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
-                <use href="./img/icons.svg#logo5" width="59px" height="47px"></use>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo" width="59px" height="47px">
+                <use href="./img/icons.svg#logo5"></use>
               </svg></a></li>
-          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo">
-                <use href="./img/icons.svg#logo6" width="170px" height="90px"></use>
+          <li class="our-clients-list-item"> <a class="our-clients-link link" href=""> <svg class="icon-logo" width="170px" height="90px">
+                <use href="./img/icons.svg#logo6"></use>
               </svg></a></li>
         </ul>
       </div>
